# ai-tinkerers-hackathon

./: .gitignore  README.md  pyproject.toml
frontend/: app.py
research_results/: papers_20250216_144808.json  papers_20250216_144808.txt  papers_20250216_145017.json  papers_20250216_145017.txt  papers_20250216_145041.json  papers_20250216_145041.txt  papers_20250216_145127.json  papers_20250216_145127.txt  papers_20250216_145202.json  papers_20250216_145202.txt
src/extract/: app.py  resume_transcript.py  symptoms.py
src/paperqa/: poc.py  pubmed.py
src/transcript/: app.py
