[project]
name = "ai-tinkerers-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.28.1",
    "loguru>=0.7.3",
    "paper-qa[local]>=5.11.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "smolagents>=1.9.2",
]
